--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
 <body>
 
 <header>
-    <img src="images/logo.jpg" alt="Pi Trade Logo" class="logo">
+    <img src="logo.jpg" alt="Pi Trade Logo" class="logo">
 </header>
 
 <nav>
@@ -96,17 +96,17 @@
     <div class="container">
         <h2>Наши Продукты</h2>
         <div class="product">
-            <img src="images/prof_dr.jpg" alt="Профессиональный дрон">
+            <img src="prof_dr.jpg" alt="Профессиональный дрон">
             <h3>Профессиональные дроны</h3>
             <p>Для кинематографистов и фотографов, требующих высочайшего качества изображения.</p>
         </div>
         <div class="product">
-            <img src="images/com_dr.jpg" alt="Коммерческий дрон">
+            <img src="com_dr.jpg" alt="Коммерческий дрон">
             <h3>Коммерческие дроны</h3>
             <p>Для инспекций, сельского хозяйства и других профессиональных применений.</p>
         </div>
         <div class="product">
-            <img src="images/lub_dr.jpg" alt="Любительский дрон">
+            <img src="lub_dr.jpg" alt="Любительский дрон">
             <h3>Любительские дроны</h3>
             <p>Для тех, кто хочет насладиться полетами и запечатлеть прекрасные моменты с воздуха.</p>
         </div>
@@ -124,13 +124,13 @@
     <div class="container">
         <h2>Галерея</h2>
         <div class="gallery-item">
-            <img src="images/gal1_dr.jpg" alt="Дрон 1">
+            <img src="gal1_dr.jpg" alt="Дрон 1">
         </div>
         <div class="gallery-item">
-            <img src="images/gar2_dr.jpg" alt="Дрон 2">
+            <img src="gar2_dr.jpg" alt="Дрон 2">
         </div>
         <div class="gallery-item">
-            <img src="images/gal3_dr.jpg" alt="Дрон 3">
+            <img src="gal3_dr.jpg" alt="Дрон 3">
         </div>
     </div>
 </section>
